--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,12 @@
 version: 2.1
 
 orbs:
-  aws-ecr: circleci/docker@1.0.1
+  docker: circleci/docker@1.0.1
 
-workflows:
+jobs:
   build:
-    jobs:
+    executor: docker/docker
+    steps:
       - checkout
       - docker/install-docker-compose
       - run:
@@ -14,3 +15,8 @@ workflows:
           command: docker-compose run spark-executor-builder /build.sh
       - store_artifacts:
           path: dist
+
+workflows:
+  build:
+    jobs:
+      - build
